--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -156,7 +156,6 @@ body {
       }
       .pp_name{
         font-size: 1rem;
-        font-weight: bold;
         color: @gray;
         margin-right: 0px;
         font-family: @text;
@@ -180,7 +179,7 @@ body {
   width:100%;
   height: calc(100vh - 90px);
   .left_side_book{
-    width:70%;
+    width:100%;
     display:flex;
     flex-direction: column;
     align-items: center;
@@ -188,9 +187,52 @@ body {
     padding:20px;
     overflow: auto;
     height: 100%;
+    .top_container{
+      display:flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width:100%;
+    }
+    .book_number_container{
+      background-color: white;
+      width: calc(50% - 10px);
+      height: 100%;
+      border-radius: 10px;
+      display:flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      h1{
+        font-size: 1.2rem;
+        font-weight: bolder;
+        color: @black;
+        font-family: @text;
+        margin-top: 40px;
+        text-transform: uppercase;
+      }
+      h2{
+        font-size: 5rem;
+        color: @blue;
+        font-family: @title;
+        height: 90px;
+        margin: 0;
+        padding:0;
+        margin-top:-30px;
+      }
+      p{
+        font-size: 1.2rem;
+        color: @gray;
+        font-family: @text;
+        margin-bottom: 40px;
+        padding:0;
+        padding: 0 30px;
+        border-bottom: 2px solid @blue;
+      }
+    }
     .top_section{
       background-color: white;
-      width: 100%;
+      width: calc(50% - 10px);
       height:auto;
       border-radius: 10px;
       display:flex;
@@ -357,16 +399,5 @@ body {
         }
       }
     }
-
-  }
-  .right_side_book{
-    width:30%;
-    background-color: @dark_blue;
-    display:flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    padding:20px;
-    height: 100%;
   }
 }
