--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -356,14 +356,14 @@ body {
   width: calc(50% - 10px);
 }
 .book_number_container{
-  width: calc(50% - 10px);
+  width: calc(40% - 10px);
 }
 .layout_book .left_side_book .book_number_container h1 {
   font-size: 1.2rem;
   font-weight: bolder;
   color: #17202A;
   font-family: 'Noto Sans';
-  margin-top: 40px;
+  margin-top: 0px;
   text-transform: uppercase;
 }
 .layout_book .left_side_book .book_number_container h2 {
@@ -391,13 +391,13 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-between;
+  justify-content: space-around;
 }
 .books_top_section{
   width: calc(50% - 10px);
 }
 .book_top_section{
-  width: calc(50% - 10px);
+  width: calc(60% - 10px);
   padding: 20px;
 }
 .layout_book .left_side_book .top_section .text {
