Books : Repair style of number of books

--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -343,8 +343,9 @@ body {
   justify-content: space-between;
   width: 100%;
 }
-.layout_book .left_side_book .number_container {
+.layout_book .left_side_book .book_number_container {
   background-color: white;
+  width: calc(50% - 10px);
   height: 100%;
   border-radius: 10px;
   display: flex;
@@ -352,18 +353,12 @@ body {
   align-items: center;
   justify-content: center;
 }
-.books_number_container{
-  width: calc(50% - 10px);
-}
-.book_number_container{
-  width: calc(40% - 10px);
-}
 .layout_book .left_side_book .book_number_container h1 {
   font-size: 1.2rem;
   font-weight: bolder;
   color: #17202A;
   font-family: 'Noto Sans';
-  margin-top: 0px;
+  margin-top: 40px;
   text-transform: uppercase;
 }
 .layout_book .left_side_book .book_number_container h2 {
@@ -386,19 +381,13 @@ body {
 }
 .layout_book .left_side_book .top_section {
   background-color: white;
+  width: calc(50% - 10px);
   height: auto;
   border-radius: 10px;
   display: flex;
   flex-direction: row;
   align-items: center;
-  justify-content: space-around;
-}
-.books_top_section{
-  width: calc(50% - 10px);
-}
-.book_top_section{
-  width: calc(60% - 10px);
-  padding: 20px;
+  justify-content: space-between;
 }
 .layout_book .left_side_book .top_section .text {
   width: 30%;
