--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -440,6 +440,43 @@ body {
   padding: 40px;
   margin-top: 20px;
 }
+.layout_book .left_side_book .books_container .books_option_container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+.layout_book .left_side_book .books_container .search_container {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 10px 0 10px;
+  margin-bottom: 20px;
+}
+.layout_book .left_side_book .books_container .search_container i {
+  color: #406bde;
+  font-size: 1rem;
+}
+.layout_book .left_side_book .books_container .search_container input {
+  width: 92%;
+  height: 40px;
+  border-radius: 20px;
+  border: 1px solid transparent;
+  padding: 0 20px;
+  font-size: 1rem;
+  color: #17202A;
+  background-color: #f5f5f5;
+  outline: none;
+  font-family: 'Noto Sans';
+  transition: all 0.2s ease-in-out;
+}
+.layout_book .left_side_book .books_container .search_container input:focus {
+  border: 1px solid #406bde;
+  border-radius: 15px;
+  transition: all 0.2s ease-in-out;
+}
 .layout_book .left_side_book .books_container .filter_container {
   display: flex;
   flex-direction: row;
