--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -467,6 +467,46 @@ body {
       justify-content: center;
       padding: 40px;
       margin-top: 20px; 
+      .books_option_container{
+        display:flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+      }
+      .search_container{
+        width: 100%;
+        display:flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 10px 0 10px;
+        margin-bottom: 20px;
+        i{
+          color: @blue;
+          font-size: 1rem;
+        }
+        input{
+          width: 92%;
+          height: 40px;
+          border-radius: 20px;
+          border: 1px solid transparent;
+          padding: 0 20px;
+          font-size: 1rem;
+          color: @black;
+          background-color: @gray_bg;
+          outline:none;
+          font-family: @text;
+          transition: all 0.2s ease-in-out;
+          &:focus {
+            border: 1px solid @blue;
+            border-radius: 15px;
+            transition: all 0.2s ease-in-out;
+          }
+        }
+                
+
+      }
       .filter_container{
         display: flex;
         flex-direction: row;
