--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -581,3 +581,22 @@ body {
   color: #f1c40f;
   margin-right: 2px;
 }
+/* ------------------------------- CREATE BOOK ------------------------------ */
+.create_book_button {
+  background-color: #406bde;
+  color: white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: 'Noto Sans';
+  cursor: pointer;
+  width: fit-content;
+  margin-top: 20px;
+  transition: all 0.2s ease-in-out;
+}
+.create_book_button:hover {
+  box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+  color: #406bde;
+  background-color: white;
+}
