--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -616,3 +616,23 @@ body {
     }
   }
 }
+
+/* ------------------------------- CREATE BOOK ------------------------------ */
+.create_book_button{
+  background-color: @blue;
+  color:white;
+  padding: 10px 20px;
+  border-radius: 25px;
+  font-size: 1rem;
+  font-weight: bold;
+  font-family: @text;
+  cursor: pointer;
+  width:fit-content;
+  margin-top: 20px;
+  transition: all 0.2s ease-in-out;
+  &:hover{
+    box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
+    color: @blue;
+    background-color: white;
+  }
+}
