--- a/library-site/src/app/globals.less
+++ b/library-site/src/app/globals.less
@@ -636,3 +636,94 @@ body {
     background-color: white;
   }
 }
+
+/* ---------------------------- MODAL CREATE BOOK --------------------------- */
+.create_book_form{
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
+  width:100%;
+  height: auto;
+  label{
+    font-size: 1rem;
+    color: @gray;
+    font-family: @text;
+    font-weight: bold;
+  }
+  input[type="text"]{
+    width: 100%;
+    margin-left: 20px;
+    height: 40px;
+    border:2px solid transparent;
+    border-bottom: 2px solid @blue;
+    background-color: @gray_bg;
+    padding: 0 20px;
+    font-size: .8rem;
+    color: @black;
+    outline:none;
+    font-family: @text;
+    transition: all 0.2s ease-in-out;
+    &:focus {
+      border: 2px solid @blue;
+      border-radius: 15px;
+      transition: all 0.2s ease-in-out;
+    }
+  }
+  select{
+    width: 100%;
+    margin-left: 20px;
+    height: 40px;
+    border:2px solid transparent;
+    border-bottom: 2px solid @blue;
+    background-color: @gray_bg;
+    padding: 0 20px;
+    font-size: .8rem;
+    color: @black;
+    outline:none;
+    font-family: @text;
+    transition: all 0.2s ease-in-out;
+  }
+  .title_group, .author_group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width:50%;
+    margin-bottom: 20px;
+  }
+  .genres_group{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width:50%;
+    margin-bottom: 20px;
+    
+    .genresList{
+      display: flex;
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+      width:100%;
+      flex-wrap: wrap;
+      margin-left:20px;
+      border:2px solid @blue;
+      border-radius: 10px;
+      padding: 10px;
+
+      .genre_item{
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        margin-right: 10px;
+        padding: 5px 0px;
+        input[type="checkbox"]{
+          width: 15px;
+          height: 15px;
+          margin-right: 5px;
+        }
+      }
+    }
+  }
+}
