--- a/library-site/src/app/globals.css
+++ b/library-site/src/app/globals.css
@@ -97,6 +97,7 @@ body {
   justify-content: space-between;
   background-color: white;
   padding: 20px 40px 20px 20px;
+  height: 100px;
 }
 .right_side .top_bar input {
   width: 25%;
@@ -292,27 +293,51 @@ body {
 .home_discover .home_books_elements {
   display: flex;
   flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
+  align-items: flex-start;
+  justify-content: flex-start;
   overflow: auto;
   width: 100%;
   padding: 0 40px;
 }
 .home_discover .home_books_elements .book_item {
   transition: all 0.2s ease-in-out;
-  width: 220px;
-  height: 300px;
+  width: 200px;
   margin: 20px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   align-items: center;
-  justify-content: space-between;
+  justify-content: flex-start;
   border-radius: 10px;
 }
 .home_discover .home_books_elements .book_item:hover {
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.329);
   transition: all 0.2s ease-in-out;
   cursor: pointer;
+}
+.home_discover .home_books_elements .book_item .bg-cover {
+  width: 200px;
+  height: 283px;
+  background-size: cover;
+  background-position: center;
+  border-radius: 10px;
+}
+.home_discover .home_books_elements .book_item .book_item_title {
+  font-size: 1.1rem;
+  font-weight: bold;
+  color: #406bde;
+  font-family: 'Noto Sans';
+  margin-top: 10px;
+  text-align: center;
+}
+.home_discover .home_books_elements .book_item .book_item_author {
+  font-size: 0.8rem;
+  color: #17202A;
+  font-family: 'Noto Sans';
+  margin-top: 5px;
+  text-align: center;
+}
+.home_discover .home_books_elements .book_item .book_item_author::before {
+  content: "- By ";
 }
 /* -------------------------------------------------------------------------- */
 /*                                  BOOK PAGE                                 */
